Tela de login,estilo zebra na lista, mudança de rotas

--- a/src/app/tasks/task-list/task-list.component.html
+++ b/src/app/tasks/task-list/task-list.component.html
@@ -1,9 +1,10 @@
+<app-navbar></app-navbar>
 <div class="container mt-4">
   <div class="card">
     <div class="card-header">Lista de Tarefas</div>
     <div class="card-body">
       <div class="table-responsive-lg">
-        <table class="table">
+        <table class="table table-hover table-striped">
           <thead>
             <tr>
               <th>#</th>
