--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,4 +1,7 @@
 <nav class="navbar navbar-light bg-light">
   <a class="navbar-brand" href="#">TO DO LIST</a>
-  <a class="btn btn-primary" [routerLink]="['new']">Adicionar Tarefa</a>
+  <div class="d-flex">
+    <a class="btn btn-primary" [routerLink]="['new']">Adicionar Tarefa</a>
+    <a class="btn btn-primary mx-2" [routerLink]="['/login']">Logout</a>
+  </div>
 </nav>
